--- a/internship/2020_src/HTML_CSS/css/test.css
+++ b/internship/2020_src/HTML_CSS/css/test.css
@@ -1,21 +1,40 @@
-span{
+table {
+	border-collapse:collapse;
+	display:inline-block;
+	margin:30px;
+}
+
+table th {
+	color:green;
+	background:lightgreen;
+}
+
+span {
 	color:red;
 	font-weight:bold;
 }
 
-p.right{
+.right {
 	text-align:right;
 }
 
-p.left{
+.left {
 	text-align:left;
 }
 
-p.center{
+.center {
 	text-align:center;
 }
 
-.button{
+.border {
+	border:solid;
+	color:gray;
+	border-radius:5%;
+	width:60%;
+	margin:auto;
+}
+
+.button {
 	display:inline-block;
 	border-radius:10%;
 	font-size:10pt;
