--- a/internship/2020_src/HTML_CSS/css/test.css
+++ b/internship/2020_src/HTML_CSS/css/test.css
@@ -29,14 +29,14 @@ span {
 .border {
 	border:solid;
 	color:gray;
-	border-radius:5%;
+	border-radius:15px/15px;
 	width:60%;
 	margin:auto;
 }
 
 .button {
 	display:inline-block;
-	border-radius:10%;
+	border-radius:5px/5px;
 	font-size:10pt;
 	text-align:center;
 	cursor:pointer;
